# ndoefastmark

./: .gitignore  package.json  pyproject.toml
pages/: index.tsx
server/: main.py
